--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ input[type="text"] {
   min-width: 200px;
 }
 
-#resultBox {
+.displayBox {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -37,11 +37,11 @@ body {
   text-align: center;
 }
 
-#detailImg {
+.detailsImg {
   height: 560px;
   width: 400px;
   outline: black solid 1px;
   background-size: contain;
   border-radius: 20px;
-  margin: 0% auto
+   margin: 0% auto
 }
