--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+
+body {
+  background-color: rgb(157, 132, 100);
+}
+
 button {
   margin: 15px 5px;
   padding: 5px;
@@ -27,10 +32,6 @@ input[type="text"] {
   outline: black solid 1px;
   border-radius: 12px;
   background-size: contain;
-}
-
-body {
-  background-color: tan;
 }
 
 #detailPage {
