--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,15 @@ body {
 }
 
 header,
-footer, .errorMessage {
+footer,
+.errorMessage {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 a {
-  color: inherit
+  color: inherit;
 }
 
 h1,
@@ -28,9 +29,10 @@ label {
   margin: 2px 10px;
 }
 
-img, .errorMessage {
+img,
+.errorMessage {
   /* font-family: "Poiret One", cursive; */
-  color:salmon
+  color: salmon;
   /* font-weight: bold; */
 }
 
@@ -71,7 +73,7 @@ input[type="text"] {
 .displayBox {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: 0% auto;
   width: 90vw;
   /* outline: black solid 2px; */
@@ -101,6 +103,11 @@ input[type="text"] {
   background-size: contain;
   border-radius: 20px;
   margin: 0% auto;
+}
+
+
+.statBox {
+  padding-top: 30px
 }
 
 .statLine {
