--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,9 @@ button {
   background-color: rgb(199, 180, 133);
 }
 
-label {
-  /* font-weight: bold; */
-}
+/* label {
+  font-weight: bold;
+} */
 
 input[type="text"] {
   min-width: 400px;
@@ -118,4 +118,29 @@ input[type="text"] {
 .copyright {
   margin-top: auto;
   margin-left: auto;
+}
+
+button:hover, .cardSpoiler:hover {
+  cursor: pointer;
+}
+
+/* Style for the set suggestion list */
+#setSuggestions {
+  position: absolute;
+  background-color: rgba(72, 61, 47, 0.8); /* Dark brown with 80% opacity */
+  border-radius: 5px;
+  z-index: 1;
+  max-height: 150px;
+  overflow-y: auto;
+  width: auto;
+}
+
+.setSuggestion {
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.setSuggestion:hover {
+  background-color: rgba(229, 222, 212, 0.2); /* Lighten color on hover */
 }
