--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(72, 61, 47);
-  font-size: 150%;
+  font-size: 125%;
   color: rgb(229, 222, 212);
   min-height: 100vh;
 }
@@ -16,6 +16,11 @@ footer,
 a {
   color: inherit;
   /* text-decoration: none; */
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
 }
 
 h1,
@@ -64,8 +69,16 @@ button {
 }
 
 input[type="text"] {
-  min-width: 400px;
+  min-width: 300px;
   font-size: 90%;
+}
+
+#rulesTextInput {
+  min-width: 425px;
+}
+
+#watermarkInput {
+  min-width: 225px;
 }
 
 .displayBox {
@@ -162,9 +175,9 @@ button:hover,
 }
 
 /* Style for the set suggestion list */
-#setSuggestions {
+.suggestions {
   position: absolute;
-  background-color: rgba(72, 61, 47, 0.8); /* Dark brown with 80% opacity */
+  background-color: rgba(72, 61, 47, 0.8);
   border-radius: 5px;
   z-index: 1;
   max-height: 150px;
