--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {
-  background-color: rgb(72, 61, 47);
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(20, 20, 25);
   font-size: 125%;
   color: rgb(229, 222, 212);
   min-height: 100vh;
@@ -33,35 +35,12 @@ legend,
 }
 
 label {
-  margin: 2px 10px;
+  /* margin-left: 5px; */
+  font-weight: 500;
 }
 
-.searchField {
-  border: 4px ridge rgb(30, 29, 28);
-  border-radius: 5px;
-  padding: 30px 20px;
-}
-
-img,
-.errorMessage {
-  /* font-family: "Poiret One", cursive; */
-  color: salmon;
-  /* font-weight: bold; */
-}
-
-input {
-  background-color: rgb(223, 209, 190);
-}
-
-select {
-  font-size: 90%;
-  background-color: rgb(213, 210, 205);
-}
-
-.buttonDiv {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
+fieldset {
+  background-color: rgb(60, 57, 50, 0.3);
 }
 
 button {
@@ -74,9 +53,66 @@ button {
   background-color: rgb(199, 180, 133);
 }
 
+input {
+  background-color: rgb(223, 209, 190);
+}
+
 input[type="text"] {
   min-width: 300px;
+  margin: 0px 5px;
   font-size: 90%;
+}
+
+select {
+  font-size: 90%;
+  background-color: rgb(213, 210, 205);
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.searchField {
+  margin: 40px 10px 15px;
+  padding: 15px;
+  border: 5px ridge rgb(40, 38, 37);
+  border-radius: 10px;
+  background-color: rgba(55, 42, 18, 0.8);
+}
+
+.randomControls {
+  border: 2px outset rgb(30, 29, 28);
+  background-color: rgba(129, 98, 42, 0.2);
+  border-radius: 10px;
+  padding: 10px 15px;
+  margin-left: 10px;
+}
+
+.selectedParamList {
+  display: none;
+}
+
+img,
+.errorMessage {
+  /* font-family: "Poiret One", cursive; */
+  color: salmon;
+  /* font-weight: bold; */
+}
+
+.buttonDiv {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.smallButton {
+  font-size: 75%;
+  margin: 0px;
+  padding: 0px;
+  width: 55px;
+  height: 30px;
 }
 
 #rulesTextInput {
@@ -180,9 +216,7 @@ button:hover,
   cursor: pointer;
 }
 
-/* Style for the set suggestion list */
 .suggestions {
-  position: absolute;
   background-color: rgba(72, 61, 47, 0.8);
   border-radius: 5px;
   z-index: 1;
@@ -191,12 +225,13 @@ button:hover,
   width: auto;
 }
 
-.setSuggestion {
+.suggestion {
+  /* display: none; */
   padding: 5px 10px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
-.setSuggestion:hover {
+.suggestion:hover {
   background-color: rgba(229, 222, 212, 0.2); /* Lighten color on hover */
 }
