--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ img,
 
 .displayBox {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   flex-wrap: wrap;
   justify-content: center;
   margin: 0% auto;
