--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ footer,
 
 a {
   color: inherit;
-  /* text-decoration: none; */
+  text-decoration: none;
+  font-weight: bold;
 }
 
 ul {
@@ -168,17 +169,28 @@ img,
   margin: 0% auto;
 }
 
+.card-name {
+  font-size: 120%;
+}
+
 .stat-table {
   font-size: 18px;
+  border-spacing: 0;
+  border-top: 1px rgba(163, 160, 160, 0.4) solid;
+}
+
+.stat-table td {
+  border-bottom: 1px rgba(163, 160, 160, 0.4) solid;
 }
 
 td {
-  padding: 5px 10px;
+  padding: 10px 10px;
 }
 
 .stat-label {
   width: 15vw;
   text-align: right;
+  color: rgb(191, 185, 178);
 }
 
 .stat-value {
